fix for forgot password alignment on studio log in page

--- a/cms/static/sass/views/_account.scss
+++ b/cms/static/sass/views/_account.scss
@@ -233,13 +233,7 @@
 
     }
   }
-}
 
-.signup {
-
-}
-
-.signin {
 
   #field-password {
     position: relative;
